--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "@platforms": ["android", "iPhone", "iPad"],
   "id" : "",
   /*应用的标识，创建应用时自动生成，勿手动修改*/
-  "name" : "campusTalk",
+  "name" : "123",
   /*应用名称，程序桌面图标名称*/
   "version": {
     "name": "1.0.0",
